# web2.0_homework_8

part 1/: config.ini  main.py  pyproject.toml  search.py  seed.py
part 1/database/: models.py
part 2/: connect_seed.py  email_consumer.py  producer.py  pyproject.toml  sms_consumer.py  test.py
part 2/database/: model.py
