[tool.poetry]
name = "test-mongodb"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"
packages = [{include = "test_mongodb"}]

[tool.poetry.dependencies]
python = "^3.11"
mongoengine = "^0.26.0"
redis = "^4.4.2"
redis-lru = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
