[tool.poetry]
name = "web2-0-homework-8-part-2"
version = "0.1.0"
description = ""
authors = ["AndrewCheUA <andreicheban@gmail.com>"]
readme = "README.md"
packages = [{include = "web2"}]

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.1"
mongoengine = "^0.26.0"
faker = "^16.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
